Finalizing Devtools translation

--- a/1-js/01-getting-started/3-devtools/bug.html
+++ b/1-js/01-getting-started/3-devtools/bug.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  There is an error in the script on this page.
+  Há um erro no script nesta página.
   <script>
     lalala
   </script>
