add debugging-chrome directory translation

--- a/1-js/03-code-quality/01-debugging-chrome/debugging.view/index.html
+++ b/1-js/03-code-quality/01-debugging-chrome/debugging.view/index.html
@@ -4,7 +4,7 @@
 
   <script src="hello.js"></script>
 
-  An example for debugging.
+  Um exemplo para depuração de erros (<i>debugging</i>).
 
   <script>
   hello("John");
